[gd_scene load_steps=12 format=3 uid="uid://bcy16b6ou4try"]

[ext_resource type="Script" uid="uid://bpcni20qyeyu7" path="res://Interactables/TreasureChest/treasure_chest.gd" id="1_1io2g"]
[ext_resource type="Texture2D" uid="uid://q3v3uapokwxt" path="res://RawAssets/Overworld/House/Objects/Chest_Anim.png" id="2_k8bcb"]
[ext_resource type="Texture2D" uid="uid://dm26hrrql0ofn" path="res://RawAssets/UI/Icons/No Outline/Food_Icons_NO_Outline.png" id="3_b3ylq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dmnfv"]
atlas = ExtResource("3_b3ylq")
region = Rect2(112, 112, 16, 16)

[sub_resource type="Animation" id="Animation_s28rp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b3ylq"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mhmah"]
resource_name = "open_chest"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.2, 1.4),
"transitions": PackedFloat32Array(0.5, -2, 2),
"update": 0,
"values": [Vector2(2, -14), Vector2(2, -24), Vector2(2, -18)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.4, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dmnfv"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmnfv"]
_data = {
&"RESET": SubResource("Animation_s28rp"),
&"closed": SubResource("Animation_b3ylq"),
&"open_chest": SubResource("Animation_mhmah"),
&"opened": SubResource("Animation_dmnfv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmnfv"]
size = Vector2(16, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3ylq"]
size = Vector2(11, 5)

[node name="TreasureChest" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_1io2g")

[node name="ChestSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -6)
texture = ExtResource("2_k8bcb")
hframes = 6
frame = 5

[node name="ItemSprite" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(2, -15)
texture = SubResource("AtlasTexture_dmnfv")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dmnfv")
}
autoplay = "closed"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -3)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_dmnfv")
debug_color = Color(0, 0.63675, 0.400947, 0.42)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_b3ylq")
